--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Record Label, Music Blog &amp; Semi Regular Club Night">
-    <meta name="keywords" content="scottish, record label, electronic, synthwave, techno, alternative">
+    <meta name="description" content="~">
+    <meta name="keywords" content="~">
     <meta name="author" content="Nina Hate">
-    <title>MUSCLE &amp; HATE</title>
+    <title>Nina Stanger</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
       <div class="container">
         <div id="branding">
-          <h1>MUSCLE &amp; HATE</h1>
+          <h1>Nina Stanger</h1>
         </div>
         <nav>
           <ul>
-            <li class="current"><a href="index.html"><b>Home</b></a></li>
-            <li><a href="about.html"><b>About</b></a></li>
+            <li class="current"><a href="Index.html"><b>Home</b></a></li>
+            <li><a href="About.html"><b>About</b></a></li>
             <li><a href="https://muscleandhate.bandcamp.com/"><b>Releases</b></a></li>
           </ul>
         </nav>
@@ -41,3 +41,4 @@
     </footer>
   </body>
 </html>
+
