--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1>NINA STANGER</h1>
+          <h1>Nina Stanger</h1>
+          <h2>artist + designer</h2>
         </div>
         <nav>
           <ul>
