--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <section id="showcase">
       <div class="container">
+        <video width="1280" height="1280" autoplay>
+          <source src="she.mp4" type="video/mp4">
+         </video>
       </div>
 
     <section id="boxes">
