--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <nav>
           <ul>
-            <li class="current"><a href="Index.html"><b>PORTFOLIO</b></a></li>
-            <li><a href="About.html"><b>STATEMENT</b></a></li>
-            <li><a href="https://muscleandhate.bandcamp.com/"><b>CV</b></a></li>
+            <li><a href="nina-stanger-portfolio.pdf"><a href="Index.html"><b>PORTFOLIO</b></a></li>
+            <li><a href="nina-stanger-statement.pdf"><b>STATEMENT</b></a></li>
+            <li><a href="nina-stanger-cv.pdf"><b>CV</b></a></li>
           </ul>
         </nav>
       </div>
