--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="~">
-    <meta name="keywords" content="~">
-    <meta name="author" content="Nina Hate">
-    <title>Nina Stanger</title>
-    <link rel="stylesheet" href="./css/style.css">
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div id="branding">
-          <h1>Nina Stanger</h1>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="nina-stanger-portfolio.pdf"><a href="Index.html"><b>PORTFOLIO</b></a></li>
-            <li><a href="nina-stanger-statement.pdf"><b>STATEMENT</b></a></li>
-            <li><a href="nina-stanger-cv.pdf"><b>CV</b></a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Nina Stanger</title>
+<style type="text/css">
+body,td,th {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+}
+h1 {
+	font-size: 10px;
+	color: #999;
+}
+h2 {
+	font-size: 14px;
+}
+a:link {
+	color: #666;
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
+	color: #F30;
+}
+a:active {
+	text-decoration: none;
+}
+</style>
+</head>
 
-    <section id="showcase">
-      <div class="container">
+<body>
+<table width="851" border="0">
+  <tr>
+    <td width="88" height="606">&nbsp;</td>
+    <td width="753"><h3 dir="ltr">&nbsp;</h3>
+      <h3 dir="ltr"><img src=" " width="94" height="75" /></h3>
+      <h3 dir="ltr"><strong>Nina Stanger</strong></h3>
+ 
+      <p dir="ltr">Artist + Designer, UK</p>
+      <p dir="ltr"> Email : <a href="mailto:">nina.anne.stanger@gmail.com</a></p>
+      <p dir="ltr">PDF's :<a href="iainball-portfolio-2016.pdf"> Portfolio</a> - <a href="iainball-statement-2016.pdf">Statement</a> - <a href="iainball - cv-2016-selected.pdf">CV </a>      </p>
+   
+      <p>&nbsp;</p>
+      <p dir="ltr"><strong>Interviews</strong></p>
+      <p dir="ltr"><a href="http://theskinny.co.uk/art/emerging-artists/djcad-dundee-degreeshow-2018">The Skinny emerging artists 2018</a></p>
+      <p dir="ltr"><a href="https://instagram.com/p/BjFJx2WhBED/?taken-by=anartistsinfo">Artists In Info</a></p>
       
-      </div>
+      <p dir="ltr">///</p>
 
-    <section id="boxes">
-      <div class="container">
-        <div class="box">
-          <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fnina_95&color=black_white&size=32" style="width: 32px; height: 32px;"></iframe>
-
-    </section>
-    <footer>
-
-    </footer>
-  </body>
+<p dir="ltr">&nbsp;</p></td>
+  </tr>
+</table>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+</body>
 </html>
-
