--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:active {
  
       <p dir="ltr">Artist + Designer, UK</p>
       <p dir="ltr"> Email : <a href="mailto:">nina.anne.stanger@gmail.com</a></p>
-      <p dir="ltr">PDF's :<a href="iainball-portfolio-2016.pdf"> Portfolio</a> - <a href="iainball-statement-2016.pdf">Statement</a> - <a href="iainball - cv-2016-selected.pdf">CV </a>      </p>
+      <p dir="ltr">PDF's (Incoming):<a href=" "> Portfolio</a> - <a href=" ">Statement</a> - <a href=" ">CV </a>      </p>
    
       <p>&nbsp;</p>
       <p dir="ltr"><strong>Accolades + Media</strong></p>
