--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ a:active {
   <tr>
     <td width="88" height="606">&nbsp;</td>
     <td width="753"><h3 dir="ltr">&nbsp;</h3>
-      <h3 dir="ltr"><img src="Untitled-1.jpg" width="94" height="75" /></h3>
+      <h3 dir="ltr"><img src=" " width="94" height="75" /></h3>
       <h3 dir="ltr"><strong>Nina Stanger</strong></h3>
  
       <p dir="ltr">Artist + Designer, UK</p>
