--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a:active {
       <p dir="ltr"> Benni Esposito Drawing Prize 2014</p>
 	    
       <p dir="ltr">///</p>
-      <p dir="ltr"><a href="http://theskinny.co.uk/art/emerging-artists/djcad-dundee-degreeshow-2018">The Skinny emerging artists 2018</a></p>
+      <p dir="ltr"><a href="http://www.theskinny.co.uk/art/emerging-artists/djcad-dundee-degree-show-2018">The Skinny emerging artists 2018</a></p>
       <p dir="ltr"><a href="https://instagram.com/p/BjFJx2WhBED/?taken-by=anartistsinfo">Artists In Info</a></p>
       
       <p dir="ltr">///</p>
